@@ -3,6 +3,8 @@ grails.project.test.class.dir = "target/test-classes"
 grails.project.test.reports.dir = "target/test-reports"
 grails.project.war.file = "target/${appName}.war"
 grails.project.groupId = "net.biomodels.jummp"
+grails.project.source.level = 1.7
+grails.project.target.level = 1.7
 grails.project.dependency.resolution = {
     // inherit Grails' default dependencies
     inherits("global") {
@@ -22,6 +24,7 @@ grails.project.dependency.resolution = {
         grailsPlugins()
         grailsHome()
         grailsCentral()
+        ebr()
 
         // uncomment the below to enable remote dependency resolution
         // from public Maven repositories
@@ -42,20 +45,22 @@ grails.project.dependency.resolution = {
         // runtime 'mysql:mysql-connector-java:5.1.5'
         // required by OntologyLookupResolver
         compile "org.ccil.cowan.tagsoup:tagsoup:1.2"
+        compile "com.googlecode.multithreadedtc:multithreadedtc:1.01"
         runtime 'hsqldb:hsqldb:1.8.0.10'
         runtime 'mysql:mysql-connector-java:5.1.17'
         runtime "postgresql:postgresql:9.1-901.jdbc4"
         // plugin dependencies
         // dependencies of plugins
         // sbml
-        runtime("org.sbml.jsbml:jsbml:1.0-SNAPSHOT") {
+        runtime("org.sbml.jsbml:jsbml:1.0-a2") {
             excludes 'woodstox-core-lgpl',
                         'staxmate',
                         'stax2-api',
                         'log4j',
                         'junit',
                         'commons-pool',
-                        'commons-dbcp'
+                        'commons-dbcp',
+                        'xstream'
         }
         // miriam lib required by sbml converters
         runtime('uk.ac.ebi.miriam:miriam-lib:1.1.3') { transitive = false }
@@ -64,22 +69,20 @@ grails.project.dependency.resolution = {
         runtime('org.codehaus.staxmate:staxmate:2.0.0') { excludes 'stax2-api' }
         runtime "org.codehaus.woodstox:stax2-api:3.1.0"
 
-        // bives
-        runtime 'org.apache.commons:commons-compress:1.1'
+        compile("org.mbine.co:libCombineArchive:0.1-SNAPSHOT") { 
+            excludes 'junit', 'slf4j-api', 'slf4j-log4j12', 'jmock-junit4' 
+        }
 
-        /*
-         * grails dependency-report still lists version 1.6.2 as a dependency of JUMMP
-         * although we don't actually explicitly require that version anywhere. It seems
-         * to be a transitive dependency of ehcache-core, which is required by hibernate-ehcache,
-         * which, in turn, is needed by hibernate.
-         */ 
-        //compile 'org.slf4j:slf4j-api:1.6.1' 
+        // bives
+        runtime('org.apache.commons:commons-compress:1.1') { excludes 'commons-io' }
+
         // jms
-        /*runtime('org.apache.activemq:activeio-core:3.1.2',
+        runtime('org.apache.activemq:activeio-core:3.1.2',
                 'org.apache.activemq:activemq-core:5.5.0',
                 'org.apache.activemq:activemq-spring:5.5.0',
                 'org.apache.xbean:xbean-spring:3.7') {
             excludes 'commons-logging',
+                    'commons-io',
                     'commons-pool',
                     'groovy-all',
                     'howl-logger',
@@ -91,55 +94,70 @@ grails.project.dependency.resolution = {
                     'slf4j-api',
                     'xalan',
                     'xml-apis'
-        }*/
-        runtime("commons-jexl:commons-jexl:1.1") { excludes 'junit' }
+        }
+        compile "xml-apis:xml-apis:1.4.01"
+        runtime("commons-jexl:commons-jexl:1.1") { excludes 'junit', 'commons-logging' }
 
         //git
         runtime 'org.eclipse.jgit:org.eclipse.jgit:1.2.0.201112221803-r'
-      
+
         compile("net.sourceforge.cobertura:cobertura:1.9.4.1") { 
             excludes 'asm',
                       'ant',
                       'log4j'
         }
+        //weceem, feeds
+        runtime("rome:rome:1.0RC2") { excludes 'junit', 'jdom' }
+        //lesscss
+        compile "commons-io:commons-io:2.4"
 
         // cobertura
         compile "asm:asm:3.1"
         compile "log4j:log4j:1.2.16"
+        compile "com.thoughtworks.xstream:xstream:1.4.3"
+
+        compile "org.apache.tika:tika-core:1.3"
     }
 
     plugins {
+        compile ":webxml:1.4.1"
         compile ":perf4j:0.1.1"
-        //compile ":jms:1.2"
+        compile ":jms:1.2"
         compile ":executor:0.3"
-        compile ":mail:1.0"
+        compile ":mail:1.0.1"
         //compile ":quartz:0.4.2"
         compile(":quartz:1.0-RC6") { excludes 'hibernate-core' /* don't need 3.6.10.Final */ }
         // to see the status of quartz jobs
         //compile(":quartz-monitor:0.2") { export = false } //requires quartz plugin version 0.4.2 
 
-        compile ":spring-security-acl:1.1"
+        compile ":spring-security-acl:1.1.1"
         compile ":svn:1.0.2"
-        runtime ":spring-security-core:1.2.7.2"
-        runtime(":spring-security-ldap:1.0.5") { export  = false }
-        compile ":lesscss:1.0.0"
-        test ":code-coverage:1.2.5"
-        test(":codenarc:0.16.1") { transitive = false }
+        runtime ":spring-security-core:1.2.7.3"
+        runtime(":spring-security-ldap:1.0.6"){ export = false }
+        compile(":lesscss-resources:1.3.3") { excludes 'commons-io' }
+        test ":code-coverage:1.2.6"
+        test(":codenarc:0.18.1") { transitive = false }
         test ":gmetrics:0.3.1"
-        compile(":weceem:1.1.2") { 
-            excludes 'xstream', 
-                        'quartz',
-                        'jquery', 
-                        'jquery-ui' 
+        runtime(":weceem:1.1.3-SNAPSHOT") {
+            excludes 'xstream',
+                     'quartz',
+                     'jquery',
+                     'jquery-ui',
+                     //also exclude java feeds API rome in order to avoid conflicting revisions
+                     'feeds',
+                     'ckeditor'
         }
+        runtime(":feeds:1.6") { excludes 'rome', 'jdom' }
+        runtime(":ckeditor:3.6.3.0") { excludes 'svn' }
         compile ":jquery-datatables:1.7.5"
-        compile ":jquery-ui:1.8.15"
-
+        compile ":jquery-ui:1.8.24"
+        // Locale plugin
+        compile ":locale-variant:0.1"
         // default grails plugins
         compile ":hibernate:$grailsVersion"
-        compile ":webflow:2.0.0"
-        compile ":jquery:1.6.1.1"
-        compile ":resources:1.1.6"
+        compile ":webflow:2.0.8.1"
+        compile ":jquery:1.10.0"
+        compile ":resources:1.2"
 
         build ":tomcat:$grailsVersion"
 
@@ -150,21 +168,24 @@ grails.plugin.location.'jummp-plugin-security' = "jummp-plugins/jummp-plugin-sec
 grails.plugin.location.'jummp-plugin-core-api' = "jummp-plugins/jummp-plugin-core-api"
 grails.plugin.location.'jummp-plugin-configuration' = "jummp-plugins/jummp-plugin-configuration"
 grails.plugin.location.'jummp-plugin-git' = "jummp-plugins/jummp-plugin-git"
-grails.plugin.location.'jummp-plugin-subversion' = "jummp-plugins/jummp-plugin-subversion"
+// Disconnect SVN for now because of the changes to the VcsManager interface and lack of time
+//grails.plugin.location.'jummp-plugin-subversion' = "jummp-plugins/jummp-plugin-subversion"
 grails.plugin.location.'jummp-plugin-sbml' = "jummp-plugins/jummp-plugin-sbml"
+grails.plugin.location.'jummp-plugin-combine-archive' = "jummp-plugins/jummp-plugin-combine-archive"
 grails.plugin.location.'jummp-plugin-bives' = "jummp-plugins/jummp-plugin-bives"
-grails.plugin.location.'jummp-plugin-remote' = "jummp-plugins/jummp-plugin-remote"
-grails.plugin.location.'jummp-plugin-dbus' = "jummp-plugins/jummp-plugin-dbus"
 grails.plugin.location.'jummp-plugin-simple-logging' = "jummp-plugins/jummp-plugin-simple-logging"
 grails.plugin.location.'jummp-plugin-web-application' = "jummp-plugins/jummp-plugin-web-application"
 //grails.plugin.location.'jummp-plugin-jms-remote' = "jummp-plugins/jummp-plugin-jms-remote"
-//grails.plugin.location.'jummp-plugin-jms' = "jummp-plugins/jummp-plugin-jms"
+if ("jms".equalsIgnoreCase(System.getenv("JUMMP_EXPORT"))) {
+    println "Enabling JMS remoting..."
+    grails.plugin.location.'jummp-plugin-remote' = "jummp-plugins/jummp-plugin-remote"
+    grails.plugin.location.'jummp-plugin-jms' = "jummp-plugins/jummp-plugin-jms"
+} else {
+    println "JMS disabled"
+}
 
-// Remove libraries not needed in production mode
+// Remove any files not needed in production mode
 grails.war.resources = { stagingDir ->
-  // need to remove unix socket JNI library as incompatible with placing inside web-app
-  // 2013-03-19 Mihai Glont: jummp-loader works fine with unix-0.5.jar in the war's WEB-INF/lib
-  // delete(file:"${stagingDir}/WEB-INF/lib/unix-0.5.jar")
 }
 
 codenarc.reports = {
@@ -186,7 +207,14 @@ codenarc.extraIncludeDirs = ['jummp-plugins/*/src/groovy',
                              'jummp-plugins/*/test/unit',
                              'jummp-plugins/*/test/integration']
 
-grails.tomcat.jvmArgs = ["-Xmx2G", "-XX:MaxPermSize=512M", "-XX:-UseGCOverheadLimit", "-server", "-XX:+UseParallelGC", "-XX:ParallelGCThreads=8"]
+grails.tomcat.jvmArgs = ["-Xmx2G",
+                        "-Xss512M",
+                        "-XX:MaxPermSize=256M",
+                        "-server",
+                        "-noverify",
+                        "-XX:+UseConcMarkSweepGC",
+                        "-XX:+UseParNewGC"
+]
 
 //ensure that AST.jar is put in the right place. See scripts/AST.groovy
 System.setProperty("jummp.basePath", new File("./").getAbsolutePath())
